src/resolver/snapshots/rusty__resolver__declared_type_annotator__tests__call_statements_are_annotated.snap
---
source: src/resolver/declared_type_annotator.rs
expression: "AnnotationPrinter ::\nprint(\"\n            FUNCTION FOO : INT\n                VAR_INPUT a: INT; b: BOOL; c: BYTE; END_VAR\n            END_FUNCTION\n\n            PROGRAM PRG\n                VAR_INPUT a: INT; b: BOOL; c: BYTE; END_VAR\n            END_PROGRAM\n            \n            FUNCTION_BLOCK FB\n                VAR_INPUT a: INT; b: BOOL; c: BYTE; END_VAR\n            END_FUNCTION_BLOCK\n            \n            PROGRAM TEST\n                VAR fb : FB; END_VAR\n\n                // function calls\n                FOO();\n                FOO(1, TRUE, 7);\n                FOO( a := 1, b := TRUE, c := 7);\n                // program calls\n                PRG();\n                PRG(1, TRUE, 7);\n                PRG( a := 1, b := TRUE, c := 7);\n                // function block calls\n                fb();\n                fb(1, TRUE, 7);\n                fb( a := 1, b := TRUE, c := 7);\n            END_PROGRAM\n            \",\n& annotations, & unit)"
---
FOO(); [<INT>]
    FOO [<FOO (Function)>]
FOO(1, TRUE, 7) [<INT>]
    FOO [<FOO (Function)>]
    1, TRUE, 7 [<->]
        1 [<DINT>]
        TRUE [<BOOL>]
        7 [<DINT>]
FOO( a := 1, b := TRUE, c := 7) [<INT>]
    FOO [<FOO (Function)>]
    a := 1, b := TRUE, c := 7 [<->]
        a := 1 [<->]
            a [<INT (Variable FOO.a)>]
            1 [<DINT>]
        b := TRUE [<->]
            b [<BOOL (Variable FOO.b)>]
            TRUE [<BOOL>]
        c := 7 [<->]
            c [<BYTE (Variable FOO.c)>]
            7 [<DINT>]
PRG(); [<->]
    PRG [<PRG (Program)>]
PRG(1, TRUE, 7) [<->]
    PRG [<PRG (Program)>]
    1, TRUE, 7 [<->]
        1 [<DINT>]
        TRUE [<BOOL>]
        7 [<DINT>]
PRG( a := 1, b := TRUE, c := 7) [<->]
    PRG [<PRG (Program)>]
    a := 1, b := TRUE, c := 7 [<->]
        a := 1 [<->]
            a [<INT (Variable PRG.a)>]
            1 [<DINT>]
        b := TRUE [<->]
            b [<BOOL (Variable PRG.b)>]
            TRUE [<BOOL>]
        c := 7 [<->]
            c [<BYTE (Variable PRG.c)>]
            7 [<DINT>]
fb(); [<->]
    fb [<FB (Variable TEST.fb)>]
fb(1, TRUE, 7) [<->]
    fb [<FB (Variable TEST.fb)>]
    1, TRUE, 7 [<->]
        1 [<DINT>]
        TRUE [<BOOL>]
        7 [<DINT>]
fb( a := 1, b := TRUE, c := 7) [<->]
    fb [<FB (Variable TEST.fb)>]
    a := 1, b := TRUE, c := 7 [<->]
        a := 1 [<->]
            a [<INT (Variable FB.a)>]
            1 [<DINT>]
        b := TRUE [<->]
            b [<BOOL (Variable FB.b)>]
            TRUE [<BOOL>]
        c := 7 [<->]
            c [<BYTE (Variable FB.c)>]
            7 [<DINT>]
