src/resolver/snapshots/rusty__resolver__declared_type_annotator__tests__call_statements_to_actions_are_annotated.snap
---
source: src/resolver/declared_type_annotator.rs
expression: "AnnotationPrinter ::\nprint(\"\n            PROGRAM PRG\n                VAR_INPUT a: INT; b: BOOL; c: BYTE; END_VAR\n            END_PROGRAM\n            ACTIONS ACTION prgAction END_ACTION END_ACTIONS\n\n            FUNCTION_BLOCK FB\n                VAR_INPUT a: INT; b: BOOL; c: BYTE; END_VAR\n            END_FUNCTION_BLOCK\n            ACTIONS ACTION fbAction END_ACTION END_ACTIONS\n            \n            PROGRAM TEST\n                VAR fb : FB; END_VAR\n                prg.prgAction(a := 1, b := TRUE, c := 7);      \n                fb.fbAction(a := 1, b := TRUE, c := 7);      \n            END_PROGRAM\n            \",\n& annotations, & unit)"
---
prg.prgAction(a := 1, b := TRUE, c := 7) [<->]
    prg.prgAction [<PRG.prgAction (Program)>]
        prg [<PRG (Program)>]
    a := 1, b := TRUE, c := 7 [<->]
        a := 1 [<->]
            a [<INT (Variable PRG.a)>]
            1 [<DINT>]
        b := TRUE [<->]
            b [<BOOL (Variable PRG.b)>]
            TRUE [<BOOL>]
        c := 7 [<->]
            c [<BYTE (Variable PRG.c)>]
            7 [<DINT>]
fb.fbAction(a := 1, b := TRUE, c := 7) [<->]
    fb.fbAction [<FB.fbAction (Program)>]
        fb [<FB (Variable TEST.fb)>]
    a := 1, b := TRUE, c := 7 [<->]
        a := 1 [<->]
            a [<INT (Variable FB.a)>]
            1 [<DINT>]
        b := TRUE [<->]
            b [<BOOL (Variable FB.b)>]
            TRUE [<BOOL>]
        c := 7 [<->]
            c [<BYTE (Variable FB.c)>]
            7 [<DINT>]
