src/resolver/snapshots/rusty__resolver__declared_type_annotator__tests__direct_access_is_annotated.snap
---
source: src/resolver/declared_type_annotator.rs
expression: "AnnotationPrinter ::\nprint(\"\n            PROGRAM PRG\n                VAR a, b, c : LWORD; END_VAR\n                %MD1.4;   //hw access records wrong range!\n                a.%X0;\n                b.%W0.%X2;\n                c.%L0.%D0;\n            END_PROGRAM\n            \",\n& annotations, & unit)"
---
END_VAR
                %MD1.4 [<DWORD>]
    1 [<DINT>]
    4 [<DINT>]
a.%X0 [<BOOL>]
    a [<LWORD (Variable PRG.a)>]
    %X0 [<->]
        0 [<DINT>]
b.%W0.%X2 [<BOOL>]
    b.%W0 [<WORD>]
        b [<LWORD (Variable PRG.b)>]
        %W0 [<->]
            0 [<DINT>]
    %X2 [<->]
        2 [<DINT>]
c.%L0.%D0 [<DWORD>]
    c.%L0 [<LWORD>]
        c [<LWORD (Variable PRG.c)>]
        %L0 [<->]
            0 [<DINT>]
    %D0 [<->]
        0 [<DINT>]
