src/resolver/snapshots/rusty__resolver__declared_type_annotator__tests__string_literals_are_annotated.snap
---
source: src/resolver/declared_type_annotator.rs
expression: "AnnotationPrinter ::\nprint(r#\"PROGRAM PRG\n                // string literals\n                'string';\n                \"wstring\";\n            END_PROGRAM\"#,\n& annotations, & unit)"
---
'string' [<__STRING6>]
"wstring" [<__WSTRING7>]
